# spanish-eit-scorer

./: .gitignore  ARCHITECTURE.md  AutoEIT Sample Transcriptions for Scoring.xlsx  AutoEIT Sample Transcriptions for ScoringOutput.xlsx  AutoEIT_Scored_Output.xlsx  CHEATSHEET.md  COMMANDS.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  DELIVERABLES.md  FINAL_SYSTEM_REPORT.md  HACKATHON_DEMO.md  INSTALLATION.md  ISSUES.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REORGANIZATION_COMPLETE.md  START_HERE.md  SUMMARY.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md  demo_evaluation.py  pyproject.toml  requirements.lock.txt  score_excel.py  score_test_data.py
apps/api/: main.py
docs/: ARCHITECTURE.md  DOCUMENTATION_INDEX.md  EVALUATION_LAYER_COMPLETE.md  EVALUATION_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README_DOCUMENTATION.md  RUBRIC_FORMAT.md  SCORING_GUIDE.md  SYSTEM_STATUS.md  architecture.md  evaluation.md
eit_scorer/: __init__.py  cli.py
eit_scorer/config/: default_rubric.yaml
eit_scorer/core/: __init__.py  alignment.py  error_labeling.py  idea_units.py  meaning_score.py  noise_handler.py  normalization.py  rubric.py  (+4 more)
examples/: api_payload.json
notebooks/: notebook_cells.txt
results/: AutoEIT_Scored_38006-2A.csv  AutoEIT_Scored_38006-2A.xlsx  summary_metrics.json
scripts/: databuilder.py  demo_evaluation.py  score_excel.py  verify_refactoring.py
tests/: test_alignment.py  test_content_units.py  test_determinism.py  test_evaluation_agreement.py  test_integration.py  test_meaning_score.py  test_noise_handler.py  test_rubric_engine.py  test_synth_pipeline.py
(+19 files in other folders)
